<resources>
    <string name="app_name">Bill Please</string>
    <string name="amt">Enter amount of the bill</string>
    <string name="pax">Enter number of pax</string>
    <string name="sc">Service Charge</string>
    <string name="gst">GST</string>
    <string name="services">Services</string>
    <string name="total">Total bill</string>
    <string name="perPax">The amount each pay</string>
    <string name="choices">Choices</string>
    <string name="reset">Reset</string>
    <string name="calc">Calculate</string>
    <string name="discount">Discount</string>
</resources>
